ДЗ№1 перші виправлення
виправив укакзанні ментером помилки

--- a/index.html
+++ b/index.html
@@ -29,9 +29,7 @@
             <h1>
                 Ефективні рішення для вашого бізнесу
             </h1>
-            <form>
-                <input type="button" value="Замовити послугу">
-            </form>
+                <button type="button">Замовити послугу</button>
         </section>
         <!-- Друга секція - переваги -->
         <section>
@@ -107,7 +105,7 @@
                     <p>Marketing</p>
                 </li>
                 <li>
-                    <img src="./images/Дизайнінтерфейсу.jpg" alt="Дизайнінтерфейсу" width="270">
+                    <img src="./images/дизайнінтерфейсу.jpg" alt="Дизайнінтерфейсу" width="270">
                     <h3>Михайло Єрмаков</h3>
                     <p>UI Designer</p>
                 </li>
@@ -116,11 +114,13 @@
     </main>
 <!-- Підвал сайту -->
 <footer>
+    <a href="">
+        WebStudio
+    </a>
     <address>
         <ul>
-            <li><a href="">WebStudio</a></li>
-            <li><a href="">м. Київ, пр-т Лесі Українки, 26</a></li>
-            <li><a href="">info@devstudio.com</a></li>
+            <li><a href="https://www.google.com.ua/maps/@50.4851493,30.4721233,14z?hl=ru" target="_blank" rel="noopener noreferrer">м. Київ, пр-т Лесі Українки, 26</a></li>
+            <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
             <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
         </ul>
         
