--- a/index.html
+++ b/index.html
@@ -78,9 +78,9 @@
                 Чим ми займаємося
             </h2>
             <ul>
-                <li><img src="./images/послуга1.jpg" alt="послуга1" width="370"></li>
-                <li><img src="./images/послуга2.jpg" alt="послуга2" width="370"></li>
-                <li><img src="./images/послуга3.jpg" alt="послуга3" width="370"></li>
+                <li><img src="./images/service1.jpg" alt="послуга1" width="370"></li>
+                <li><img src="./images/service2.jpg" alt="послуга2" width="370"></li>
+                <li><img src="./images/service3.jpg" alt="послуга3" width="370"></li>
             </ul>
         </section>
         <!-- Четверта секція - наша команда -->
@@ -90,22 +90,22 @@
             </h2>
             <ul>
                 <li>
-                    <img src="./images/дизайнер.jpg" alt="дизайнер" width="270">
+                    <img src="./images/productdesigner.jpg" alt="дизайнер" width="270">
                     <h3>Ігор Дем'яненко</h3>
                     <p>Product Designer</p>
                 </li>
                 <li>
-                    <img src="./images/фронтенд.jpg" alt="фронтенд" width="270">
+                    <img src="./images/frontenddeveloper.jpg" alt="фронтенд" width="270">
                     <h3>Ольга Рєпіна</h3>
                     <p>Frontend Developer</p>
                 </li>
                 <li>
-                    <img src="./images/маркетинг.jpg" alt="маркетинг" width="270">
+                    <img src="./images/marketing.jpg" alt="маркетинг" width="270">
                     <h3>Микола Тарасов</h3>
                     <p>Marketing</p>
                 </li>
                 <li>
-                    <img src="./images/дизайнінтерфейсу.jpg" alt="Дизайнінтерфейсу" width="270">
+                    <img src="./images/uidesigner.jpg" alt="Дизайнінтерфейсу" width="270">
                     <h3>Михайло Єрмаков</h3>
                     <p>UI Designer</p>
                 </li>
